# hnf

./: Cargo.toml  README.md  REUSE_FROM_HCP.md
.github/workflows/: ci.yml
crates/hnf-core/: Cargo.toml  README.md
crates/hnf-core/src/: lib.rs
crates/hnf-core/src/diff/: mod.rs  object_graph.rs  path.rs
crates/hnf-core/src/domain/: bim.rs  bom.rs  energy_building.rs  firmware.rs  geospatial.rs  ic_layout.rs  layout.rs  mechanical.rs  mod.rs  schematic.rs  simulation.rs  structural.rs
crates/hnf-core/tests/: diff_fixtures.rs  domain_fixtures.rs
crates/hnf-core/tests/fixtures/: bim_invalid_unknown_storey.json  bim_valid.json  bom_invalid_empty_lines.json  bom_invalid_zero_quantity.json  bom_valid.json  energy_building_invalid_empty_zones.json  energy_building_valid.json  firmware_invalid_empty_targets.json  firmware_valid.json  geospatial_invalid_empty_layers.json  geospatial_valid.json  ic_layout_invalid_dangling_layer.json  ic_layout_valid.json  layout_invalid_empty_geometry.json  layout_valid.json  mechanical_invalid_empty_solids.json  mechanical_valid.json  schematic_invalid_dangling_pin.json  schematic_invalid_wrong_domain.json  schematic_valid.json  simulation_invalid_zero_nodes.json  simulation_valid.json  structural_invalid_empty_members.json  structural_valid.json
docs/: CRDT_SPIKE.md
schemas/domains/: bim.json  bom.json  energy_building.json  firmware.json  geospatial.json  ic_layout.json  layout.json  mechanical.json  schematic.json  simulation.json  structural.json
spec/: spec-v0.1.md
