[package]
name = "hnf-core"
description = "HNF document model and ToolAdapter traits (HummingBird v8)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sidecar-protocol.workspace = true
